ui: work on layout

--- a/src/ui/AppRoute.pug
+++ b/src/ui/AppRoute.pug
@@ -18,6 +18,36 @@ script.
 	export post = null
 	export wiki = null
 
+header#app-feed-header
+	{#if feed?.collection_id}
+		{#key feed.collection_id}
+			CollectionAvatar(id={feed.collection_id} size='large')
+		h1#app-feed-name collection: {feed.collection_id}
+	{:else if feed?.multireddit_name}
+		{#key feed.user_name}
+			{#key feed.multireddit_name}
+				MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
+		h1#app-feed-name {feed.user_name}/{feed.multireddit_name}
+	{:else if feed?.subreddit_name}
+		{#key feed.subreddit_name}
+			SubredditAvatar(name={feed.subreddit_name} size='large')
+		h1#app-feed-name {feed.subreddit_name}
+	{:else if feed?.user_name}
+		{#key feed.user_name}
+			UserAvatar(name={feed.user_name} size='large')
+		h1#app-feed-name u/{feed.user_name}
+{#if feed}
+	nav#app-feed-navigation
+		{#key feed.collection_id}
+			{#key feed.filter}
+				{#key feed.multireddit_name}
+					{#key feed.search_sort}
+						{#key feed.search_text}
+							{#key feed.sort}
+								{#key feed.subreddit_name}
+									{#key feed.time_range}
+										{#key feed.user_name}
+											Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
 main#app-main-content
 	{#if wiki}
 		{#key wiki.subreddit_name}
@@ -42,10 +72,10 @@ main#app-main-content
 			Feed(page_size={100} title='Popular subreddits' type='popular_subreddits')
 		{:else if feed.subreddit_name}
 			{#key feed.subreddit_name}
-				Feed(page_size={25} sort={feed.sort} subreddit_name={feed.subreddit_name} title='Newest comments' type='subreddit_comments')
+				Feed(page_size={25} sort={feed.sort} subreddit_name={feed.subreddit_name} type='subreddit_comments')
 		{:else if feed.user_name}
 			{#key feed.user_name}
-				Feed(page_size={25} title='Newest comments' type='user_comments' user_name={feed.user_name})
+				Feed(page_size={25} type='user_comments' user_name={feed.user_name})
 {#if !wiki}
 	aside#app-secondary-content
 		{#if post?.id}
@@ -64,45 +94,23 @@ main#app-main-content
 		{:else if feed?.user_name}
 			{#key feed.user_name}
 				UserInfo(name={feed.user_name})
-nav#app-main-navigation
-	header#app-main-navigation-header
-		section#app-main-navigation-header-logo
-			h1#app-name
-				a(href='/') Arc
-			span#app-version-string v1.0.0
-		{#if feed?.type === 'collection_posts'}
-			{#key feed.collection_id}
-				CollectionAvatar(id={feed.collection_id} size='large')
-		{:else if feed?.type === 'multireddit_posts'}
-			{#key feed.user_name}
-				{#key feed.multireddit_name}
-					MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
-		{:else if feed?.type === 'subreddit_posts' || wiki?.page_name}
-			{#key feed.subreddit_name}
-				SubredditAvatar(name={feed.subreddit_name} size='large')
-		{:else if feed?.type === 'user_posts'}
-			{#key feed.user_name}
-				UserAvatar(name={feed.user_name} size='large')
-	{#if feed}
-		{#key feed.collection_id}
-			{#key feed.filter}
-				{#key feed.multireddit_name}
-					{#key feed.search_sort}
-						{#key feed.search_text}
-							{#key feed.sort}
-								{#key feed.subreddit_name}
-									{#key feed.time_range}
-										{#key feed.user_name}
-											Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} title={wiki?.page_name ? 'Pages' : 'Posts'} type={feed.type} user_name={feed.user_name})
 
 style.
-	#app-main-content
-		display flex
+	#app-feed-header
+		align-items center
+		display none
 		flex-flow column nowrap
-		gap 1.333em
-		padding 5em 0
-		width 510px
-	#app-main-navigation
+		gap 2em
+		position fixed
+		right calc(50% + 460px)
+		top 4em
+		@media(min-width 1024px)
+			display flex
+	#app-feed-name
+		color var(--c-text-faint)
+		font-size 2em
+		writing-mode vertical-lr
+	#app-feed-navigation
 		align-items flex-start
 		display none
 		flex-flow column nowrap
@@ -111,37 +119,29 @@ style.
 		overflow auto
 		padding 4em 1em
 		position fixed
-		right calc(50% + 280px)
+		right calc(50% + 260px)
 		scrollbar-width none
 		top 0
 		width 200px
 		&::-webkit-scrollbar
 			display none
-		@media(min-width 960px)
+		@media(min-width 1024px)
 			display flex
-	#app-main-navigation-header
-		align-items center
+	#app-main-content
 		display flex
-		gap 1em
-		justify-content space-between
-		width 100%
-	#app-name
-		color var(--c-text-weak)
-		font-size 3em
-		line-height 48px
+		flex-flow column nowrap
+		gap 1.333em
+		padding 3em 0
+		top 0
+		width 480px
+		&::-webkit-scrollbar
+			display none
 	#app-secondary-content
 		display none
-		left calc(50% + 280px)
-		height 100dvh
-		overflow auto
-		padding 5em 1em
-		position fixed
-		scrollbar-width none
+		left calc(50% + 260px)
+		padding 4em 1em
+		position absolute
 		top 0
-		width 200px
-		&::-webkit-scrollbar
-			display none
-		@media(min-width 960px)
+		width 240px
+		@media(min-width 1024px)
 			display initial
-	#app-version-string
-		color var(--c-text-faint)
