--- a/src/ui/component/feed/FeedSearchOptions.pug
+++ b/src/ui/component/feed/FeedSearchOptions.pug
@@ -54,7 +54,7 @@ menu.feed-options-search
 
 style.
 	.feed-options-search
-		align-items flex-start
+		align-items inherit
 		display flex
 		flex-flow inherit
 		gap 1em
