--- a/src/ui/component/post/PostVideoPlayer.pug
+++ b/src/ui/component/post/PostVideoPlayer.pug
@@ -158,7 +158,7 @@ figure.media-player(bind:this={player} class:media-player-controls-hidden={fulls
 		source(src={video_url} type='video/mp4')
 	figure.media-player-video-hint-overlay(style='height: {height}px; width: {width}px') ▶ Play in fullscreen
 	menu.media-player-controls
-		Button(action={play_pause} activated={!paused} description='Play / pause' key='p' text="{Time.sToMediaDurationStr(reactive_time > 0 ? reactive_time : duration)}")
+		Button(action={play_pause} activated={!paused} description='Play / pause' key='p' text="▶ / ■ {Time.sToMediaDurationStr(reactive_time > 0 ? reactive_time : duration)}")
 		.media-scrobbler(title='Drag left or right to change playback position')
 			figure.media-scrobbler-graphics(style='background: linear-gradient(to right, {buffer_gradient_params(buffer_regions)})')
 			input.media-scrobbler-input(bind:this={scrobbler} on:input={e => set_time(e.target.value)} max={duration} min={0} step={1/1000} type='range')
@@ -221,7 +221,7 @@ style.
 			opacity 1
 	.media-scrobbler
 		align-items center
-		background var(--c-tint-normal)
+		background var(--c-con-normal)
 		border-radius 11px
 		display flex
 		flex 1
@@ -256,7 +256,7 @@ style.
 			margin-top 2px
 			width 4px
 	.media-volume
-		background var(--c-tint-normal)
+		background var(--c-con-normal)
 		border-radius 11px
 		padding 0 9px
 		position relative
