--- a/src/ui/AppRouteFrontpage.pug
+++ b/src/ui/AppRouteFrontpage.pug
@@ -33,10 +33,6 @@ script.
 	Status(type='error' message={error.description || error.reason || 'The server could be having issues. You can also try clearing your browser cache.'} title='Error loading subreddits')
 {:else if subreddits}
 	main#app-frontpage
-		section#app-main-navigation-header-logo
-			h1#app-name
-				a(href='/') Arc
-			span#app-version-string v1.0.0
 		ol.subreddit-grid(style='grid-template-columns: repeat({Math.ceil(Math.sqrt(subreddits.length))}, 1fr); grid-template-rows: repeat({Math.ceil(subreddits.length / Math.ceil(Math.sqrt(subreddits.length)))}, 1fr)')
 			{#each subreddits as subreddit}
 				a.subreddit-grid-cell(href='/{subreddits_data[subreddit] ? subreddits_data[subreddit].display_name : subreddit}' style="background-color: {subreddits_data[subreddit]?.primary_color || subreddits_data[subreddit]?.key_color}")
@@ -44,30 +40,13 @@ script.
 
 style.
 	#app-frontpage
-		display grid
-		gap 0.666em
-		grid-template-columns 1fr 510px 1fr
 		height 100dvh
-		padding 4em
+		padding 3em
 		width 100dvw
-	#app-main-navigation-header-logo
-		justify-self flex-end
-		width 200px
-	#app-name
-		color var(--c-text-weak)
-		font-size 3em
-		line-height 48px
-	#app-version-string
-		color var(--c-text-faint)
 	.subreddit-grid
 		display grid
-		gap 0.666em
 		height 100%
-		place-items center
+		width 100%
 	.subreddit-grid-cell
-		aspect-ratio 1
-		border-radius 50%
 		display grid
-		max-width 8dvmin
 		place-content center
-		width 100px
