--- a/src/ui/component/feed/subreddit/SubredditWikipage.pug
+++ b/src/ui/component/feed/subreddit/SubredditWikipage.pug
@@ -56,7 +56,7 @@ svelte:head
 		section.wiki-info
 			{#if page.revision_date}
 				date.wiki-edit-date(title={Time.sToAbsTimeStr(page.revision_date)}) Last revised: {Time.sToAbsRelTimeStr(page.revision_date)}
-		section.color-strategy-ultralight-bg.wiki-body
+		section.wiki-body
 			{#if page_name === 'pages'}
 				ol.wiki-all-pages-list.md
 					{#each page as page_name}
@@ -70,11 +70,7 @@ svelte:head
 
 style.
 	.wiki-body
-		background white
-		border-radius 1.333em
-		color black
-		margin-top 1em
-		padding 1em
+		margin-top 2em
 	.wiki-edit-date
 		cursor help
 	.wiki-info
@@ -99,16 +95,14 @@ style.
 		overflow auto
 		padding 5em 1em
 		position fixed
-		left calc(50% + 280px)
+		left calc(50% + 430px)
 		scrollbar-width none
 		top 0
-		width 200px
+		width 240px
 		&::-webkit-scrollbar
 			display none
-		@media (min-width: 960px)
+		@media (min-width: 1024px)
 			display initial
-		@media (min-width: 1280px)
-			width 320px
 	:global(.wiki .toc a)
 		padding 0
 		text-decoration none
