--- a/src/ui/AppRouteHome.pug
+++ b/src/ui/AppRouteHome.pug
@@ -1,38 +1,54 @@
 script.
+	import { getContext } from 'svelte'
+
 	import api from '../api/index.js'
 
-	import LoginButton from './component/user/account/LoginButton.pug'
-	import LogoutButton from './component/user/account/LogoutButton.pug'
-	import SubredditAvatar from './component/feed/subreddit/SubredditAvatar.pug'
 	import Status from './component/common/Status.pug'
+	import SubredditAvatar from './component/feed/subreddit/SubredditAvatar.pug'
 
 	MAX_SUBREDDITS = 100
 
 	error = false
 	loading = false
+	set_theme_color = getContext('set_theme_color')
 	subreddits = []
+	subreddits_data = {}
 
-	if api.isLoggedIn()
-		api.loadWatch(api.ID('account_subreddits_subscribed', MAX_SUBREDDITS), ({ data, error, loading }) ->
-			subreddits = data or []
-		)
-	else
-		api.loadWatch(api.ID('global_subreddits_popular', MAX_SUBREDDITS), ({ data, error, loading }) ->
-			subreddits = data or []
-		)
+	api.loadWatch(api.ID((if api.isLoggedIn() then 'account_subreddits_subscribed' else 'global_subreddits_popular'), MAX_SUBREDDITS), ({ data, error, loading }) ->
+		subreddits = data or []
+		if subreddits.length
+			for subreddit_name in subreddits
+				api.loadWatch(api.ID('subreddit', subreddit_name), ({ data: subreddit }) ->
+					if subreddit
+						subreddits_data[subreddit_name] = subreddit
+				)
+	)
 
-{#if api.isLoggedIn()}
-	LogoutButton
-{:else}
-	LoginButton
+	set_theme_color('#ffffff')
+
 {#if loading}
 	span Loading...
 {:else if error}
 	Status(type='error' message={error.description || error.reason || 'The server could be having issues. You can also try clearing your browser cache.'} title='Error loading subreddits')
 {:else if subreddits}
-	ol
-		{#each subreddits as subreddit}
-			li(style='position:fixed;top:{Math.random() * 100}vh;left:{Math.random() * 100}vw')
-				SubredditAvatar(name={subreddit})
+	main#app-home
+		ol.subreddit-grid(style='grid-template-columns: repeat({Math.ceil(Math.sqrt(subreddits.length))}, 1fr); grid-template-rows: repeat({Math.ceil(subreddits.length / Math.ceil(Math.sqrt(subreddits.length)))}, 1fr)')
+			{#each subreddits as subreddit}
+				a.subreddit-grid-cell(href='/{subreddits_data[subreddit] ? subreddits_data[subreddit].display_name : subreddit}' style="background-color: {subreddits_data[subreddit]?.primary_color || subreddits_data[subreddit]?.key_color}")
+					SubredditAvatar(name={subreddit} size='large')
 
 style.
+	#app-home
+		height 100dvh
+		padding 3em
+		width 100dvw
+	.subreddit-grid
+		display grid
+		gap 10px
+		height 100%
+		width 100%
+	.subreddit-grid-cell
+		background var(--c-shade-weak)
+		border-radius 1em
+		display grid
+		place-content center
