--- a/src/ui/component/feed/FeedSearchOptions.pug
+++ b/src/ui/component/feed/FeedSearchOptions.pug
@@ -36,7 +36,7 @@ menu.feed-options-search
 	{#key search_text}
 		TextInput(autofocus={true} enter_action={value => internal_navigate({ href: location.origin + format_url({ feed_search_sort: search_sort, feed_search_text: value, feed_sort: 'search', multireddit_name, subreddit_name, user_name }) }) } initial_value={search_text})
 	{#if subreddit_search_flair_widget}
-		Button(action={() => subreddit_search_picking_flair = true} text='Flairs...')
+		Button(action={() => subreddit_search_picking_flair = true} text='Flair')
 		{#if subreddit_search_picking_flair}
 			<!-- svelte-ignore a11y-no-static-element-interactions -->
 			.feed-options-search-subreddit-flair-close-handler(on:click={() => subreddit_search_picking_flair = false} on:keydown={e => { if(e.key === 'Enter') { subreddit_search_picking_flair = false } } })
