--- a/src/ui/component/common/Button.pug
+++ b/src/ui/component/common/Button.pug
@@ -5,6 +5,7 @@ script.
 	
 	export action = ->
 	export activated = false
+	export adjacency = 'none'
 	export badge = null
 	export description = ''
 	export disabled = false
@@ -18,11 +19,11 @@ script.
 	export text = ''
 
 {#if options}
-	select.button.button-dropdown(class:button-activated={activated} class:disabled={disabled || loading} on:change={e => action(e.target.value)} title={description} use:hotkey={key})
+	select.button.button-dropdown(class:button-activated={activated} class:disabled={disabled || loading} class='button-adjacency-{adjacency}' on:change={e => action(e.target.value)} title={description} use:hotkey={key})
 		{#each options as option}
 			option.button-dropdown-option(disabled={option.disabled} label={option.label} selected={selected === option.value} value={option.value})
 {:else if link}
-	a.button(class:button-activated={activated} class:button-disabled={disabled} href={disabled ? null : link} target={new_tab ? '_blank' : ''} title={description} use:hotkey={key})
+	a.button(class:button-activated={activated} class:button-disabled={disabled} class='button-adjacency-{adjacency}' href={disabled ? null : link} target={new_tab ? '_blank' : ''} title={description} use:hotkey={key})
 		{#if key}
 			HotkeyLabel(key={key})
 		{#if text}
@@ -30,7 +31,7 @@ script.
 		{#if badge}
 			span.button-badge {badge}
 {:else}
-	button.button(class:button-activated={activated} disabled={disabled || loading} on:keydown={e => e.key === 'Enter' && action()} on:mousedown={e => e.button === 0 && action()} title={description} use:hotkey={key})
+	button.button(class:button-activated={activated} class='button-adjacency-{adjacency}' disabled={disabled || loading} on:keydown={e => e.key === 'Enter' && action()} on:mousedown={e => e.button === 0 && action()} title={description} use:hotkey={key})
 		{#if loading}
 			| {loading_text}
 		{:else}
@@ -45,13 +46,11 @@ style.
 	.button
 		align-items center
 		background var(--c-shade-weak)
-		border-radius 11px
 		display inline-flex
 		font-family var(--f-family-mono)
 		gap 5px
 		letter-spacing 0.333px
 		padding 3px 9px
-		position relative
 		text-align left
 		user-select none
 		white-space nowrap
@@ -63,6 +62,14 @@ style.
 			opacity 0.5
 		&:hover:not(.button-activated)
 			background var(--c-shade-strong)
+		&.button-adjacency-group-end
+			border-end-end-radius 11px
+			border-start-end-radius 11px
+		&.button-adjacency-group-start
+			border-end-start-radius 11px
+			border-start-start-radius 11px
+		&.button-adjacency-none
+			border-radius 11px
 	.button-badge
 		border-radius 10px
 		background var(--c-blend-weak)
