ui: fix TextInput placeholder not using theme color

--- a/src/ui/component/common/TextInput.pug
+++ b/src/ui/component/common/TextInput.pug
@@ -45,6 +45,8 @@ style.
 		width 100%
 		&:focus
 			outline none
+		&::placeholder
+			color var(--c-text-faint)
 	.text-input-label
 		align-items center
 		display inline-flex
